{{$NEXT}}
  - Use PDF::Content v0.5.7+ PDF::Content::Canvas role for composing
    XObject Forms and Tiling Patterns

0.4.15  2021-08-07T06:53:26+12:00
  - fixed type checks for Type0 font /Encoding entry and Mask /G
    (transparency-group) entry.
  - fixed #19 /Resources entry placement by removing initialization of
    /ProcSet[ /PDF /Text ]. This is marked obsolete in ISO-32000. It's
    purpose is/was to support conversion to PostSript in older drivers.

0.4.14  2021-07-09T09:10:33+12:00
  - fix stream decoding in PDF::Function::Sampled
  - fix pdf-font.t for PDF::Content v0.5.4+

0.4.13  2021-04-15T11:04:33+12:00
  - rename method calls .perl -> .raku
  - fix test for pending Rakudo 2021.04

0.4.12  2021-03-25T13:24:49+13:00
  - Fix tests for PDF::Content v0.5.0+. core-font() now returns a
    PDF::Content::FontObj object.

0.4.11  2021-02-11T15:36:59+13:00
  - Fix PDF::ColorSpace coercement of [/Pattern]
  - Fix PDF::Function::Sampled handling of uncompressed stream data

Release 0.4.10
- Rename of PDF::Reader -> PDF::IO::Reader and PDF::Writer -> PDF::IO::Writer
 in PDF v0.4.5

Release 0.4.9
- Add external PDF::MarkInfo role.

Release 0.4.8
- Use COS COERCE() method, introduced with PDF 0.4.4+ coercion semantics.
- Fix invalid pdf-function-sampled.t stream /Length test.

Release 0.4.7
- Change PDF::Function::Postscript calc() return value from Seq to Array - for
  consistency with other function types.
- Fix Font::Descriptor::CID, broken in last release (PDF::Tags issue #4)

Release 0.4.6
- Fix SMask (soft-mask) handling in PDF::Image to-png() method
- Add role for Font::Descriptor::CID /Style entry
- Export PDF::Field::Choice :FieldOptions, :&coerce-field-opts for reuse
  by FDF::Field (FDF module)
- Declare entries as PDF::COS::TextString in PDF::AcroForm, PDF::Action::SubmitForm,
  PDF::OutputIntent. We need these to correctly encode and decode as UTF-8/PDFDoc.

Release 0.4.5
- Renamed sub &export: PDF::Field :&coerce -> :&coerce-field