@@ -5,16 +5,17 @@
 endobj
 
 2 0 obj
-<<
-  /Type /Pages
-  /Count 1
-  /Kids [ 3 0 R ]
-  /Resources << /Font << /F1 5 0 R /F2 6 0 R >> /ProcSet [ /PDF /Text ] >>
->>
+<< /Type /Pages /Count 1 /Kids [ 3 0 R ] >>
 endobj
 
 3 0 obj
-<< /Type /Page /Contents 4 0 R /MediaBox [ 0 0 612 792 ] /Parent 2 0 R >>
+<<
+  /Type /Page
+  /Contents 4 0 R
+  /MediaBox [ 0 0 612 792 ]
+  /Parent 2 0 R
+  /Resources << /Font << /F1 5 0 R /F2 6 0 R >> >>
+>>
 endobj
 
 4 0 obj
@@ -75,12 +76,12 @@ xref
 0000000000 65535 f 
 0000000015 00000 n 
 0000000065 00000 n 
-0000000206 00000 n 
-0000000296 00000 n 
-0000000953 00000 n 
-0000001064 00000 n 
+0000000125 00000 n 
+0000000274 00000 n 
+0000000931 00000 n 
+0000001042 00000 n 
 trailer
-<< /ID [ (t/pdf-canvas.t  ) (t/pdf-canvas.t  ) ] /Root 1 0 R /Size 7 >>
+<< /ID [ (t/html-canvas.t ) (t/html-canvas.t ) ] /Root 1 0 R /Size 7 >>
 startxref
-1168
+1146
 %%EOF
