@@ -1,13 +1,15 @@
 {{$NEXT}}
   - Use PDF::Content v0.5.7+ PDF::Content::Canvas role for composing
-    XObject Forms and Tiling Patterns
+    XObject Form and Tiling Pattern classes
+  - Replace canvas(&code) with html-canvas(&code) in pdf-canvas.t
+    as deprecated in PDF::Content v0.5.8+
 
 0.4.15  2021-08-07T06:53:26+12:00
   - fixed type checks for Type0 font /Encoding entry and Mask /G
     (transparency-group) entry.
   - fixed #19 /Resources entry placement by removing initialization of
     /ProcSet[ /PDF /Text ]. This is marked obsolete in ISO-32000. It's
-    purpose is/was to support conversion to PostSript in older drivers.
+    purpose is/was to support conversion to PostScript in older drivers.
 
 0.4.14  2021-07-09T09:10:33+12:00
   - fix stream decoding in PDF::Function::Sampled
